--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,8 +51,8 @@ jobs:
           mkdir -p ship/amd64 ship/arm64
           
           # Copy artifacts (assuming build:all puts them in dist/)
-          cp -r dist/amd64/* ship/amd64/
-          cp -r dist/arm64/* ship/arm64/
+          cp -r dist/wispmark-linux-amd64 ship/amd64/wispmark
+          cp -r dist/wispmark-linux-arm64 ship/arm64/wispmark
 
           # Remove forbidden files/folders from the ship directory
           find ship -type f \( -name ".*" -o -name "package.json" -o -name "bun.lock" -o -name "cargo.lock" -o -name "cargo.toml" \) -delete
