--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ tokio = { version = "1.42", features = ["full"] }
 reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+dirs = "5.0"
 clap = { version = "4.5", features = ["derive"] }
 anyhow = "1.0"
 regex = "1.11"
